# bystro

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .initialize_conda_env.sh  .perltidyrc  .pre-commit-config.yaml  .python-version  AMAZON2023.md  API.md  BUILD.md  CONTRIBUTING.md  Changes.md  DEMO2.md  Dockerfile  Dockerfile.perl  Dockerfile.python  Elasticsearch.md  FIELDS.md  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md  TESTING.md  TUTORIAL.md  annotation.tsv  aws-starutp.sh  dev-startup.yml  go.mod  go.sum  install  install-apt.sh  install-mac.sh  install-perl-libs  install-perl-libs.sh  install-rpm.sh  startup.yml  update-packages.sh
bystro/: Cargo.toml  pyproject.toml  requirements.txt  setup.py
bystro/python/bystro/search/index/: handler.py  listener.py
bystro/python/bystro/search/save/: handler.py  listener.py
bystro/python/bystro/search/utils/: annotation.py  beanstalkd.py  messages.py
python/: .gitignore  Cargo.toml  build.rs  conftest.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/.github/workflows/: CI.yml
python/python/bystro/: __init__.py  _template_npr.py  _template_sgd_np.py  _template_sgld.py
python/python/bystro/ancestry/: __init__.py  adversarial_autoencoder.py  ancestry_types.py  asserts.py  beanstalk.py  define_callset.py  delete_jobs.py  dummy_ancestry_response.py  gmm_ancestry.py  inference.py  listener.py  model.py  preprocess_1kgp_using_gnomad_loadings.sh  preprocess_vcfs.sh  run_ancestry_worker.py  run_ancestry_worker2.py  sample_response.py  send_jobs.py  spherical_autoencoder.py  test_adversarial_autoencoder.py  train.py  train_chip_model.py  train_gnomad_model.py  train_utils.py  upload_model.py
python/python/bystro/ancestry/ancestry/: ancestry_types.py  beanstalk.py
python/python/bystro/ancestry/ancestry_model_products/: .gitignore
python/python/bystro/ancestry/data/: .gitignore
python/python/bystro/ancestry/tests/: __init__.py  (+9 more)
python/python/bystro/annotation/: listener.py
python/python/bystro/api/: ancestry.py  annotation.py  auth.py  cli.py  proteomics.py  search.py  streaming.py
python/python/bystro/beanstalkd/: messages.py  worker.py
python/python/bystro/cli/: ancestry.py  cli.py  proteomics_cli.py
python/python/bystro/covariance/: _base_covariance.py  _base_precision.py  _covariance_cvx.py  _covariance_np.py  _precision_cvx.py  _precision_np.py  _precision_tf.py  covariance_cov_shrinkage.py  geodesics.py  hypothesis_classical.py  hypothesis_hd.py  losses_covariances.py  matlab_results.mat  numerical_shrinkage.py  operator_shrinkage.py  opt_shrink.py  optimal_shrinkage.py  poirot.py  positive_definite_average.py  rmt_cov_est.py  test.py
python/python/bystro/domain_adaptation/: batch_adaptation.py  batch_bayesian.py  spectral_adaptation.py
python/python/bystro/examples/: Demo_Bayesian_Batch_Adaptation.ipynb  Demo_Estimating_Parent_of_Origin_Effect.ipynb  Demo_Fair_PCA.ipynb  Demo_Imputing_Missing_Data.ipynb  Demo_Learning_Predictive_Network.ipynb  Demo_accounting_for_batch_effects_with_control.ipynb  ExampleConvertAncestryJsonToTsv.ipynb  ExampleQueryToDataFrame.ipynb  ExampleStreamFile.ipynb  ProteomicsProxiedQuery.ipynb
python/python/bystro/imputation/: _base.py  dosage_knn_impute.py  soft_impute.py  soft_impute_cv.py
python/python/bystro/local_ancestry/: multi_ancestry.py
python/python/bystro/parent_of_origin/: parent_of_origin.py
python/python/bystro/proteomics/: README.md  annotation_interface.py  default_query_fields.py  fragpipe_data_independent_analysis.py  fragpipe_tandem_mass_tag.py  fragpipe_utils.py  handler.py  listener_annotation_interface.py  notes.md  proteomics.py  proteomics_cli.py  proteomics_listener.py  proteomics_types.py  rotation_adaptation.py  somascan.py  uniprot_id_gene_name_mapping.csv  uniprot_id_gene_name_mapping.py  utils.py
python/python/bystro/prs/: handler.py  listener.py  messages.py  model.py  preprocess_for_prs.py  prs_listener.py  prs_types.py  prscs.py  prscs_hmcmc.py  prscs_sgld.py
python/python/bystro/random_matrix_theory/: binary_string_tw.p  rmt4ds_cov_test.py  rmt_stat.py  tracy_widom.py
python/python/bystro/rare_variant/: _base_mrf.py  markov_random_field.py  markov_random_field_nce.py  parent_of_origin.py  poe_gmm.py  poirot.py  reduced_rank.py
python/python/bystro/search/: __init__.py
python/python/bystro/stochastic_gradient_langevin/: sgld_optimizer_pt.py  sgld_scheduler.py
python/python/bystro/supervised_ppca/: _base.py  _losses_tf.py  _misc_np.py  _misc_pt.py  _misc_tf.py  _sherman_woodbury_pt.py  cannonical_correlation_analysis.py  gf_adversarial_pt.py  gf_comparisons.py  gf_dropout_pt.py  gf_dropout_tf.py  gf_generative_missing_pt.py  gf_generative_pt.py  gf_generative_tf.py  gf_marginal.py  partial_least_squares_tf.py  ppca_adversarial.py  ppca_analytic_np.py  ppca_augmented.py  ppca_regularized.py
python/python/bystro/tada_mixture/: mixture_tada_em.py  mixture_tada_marginal.py
python/python/bystro/tadarrr/: ._reduced_rank_pt.py.swp  _base.py  _reduced_rank_cvx.py  _reduced_rank_np.py  _reduced_rank_pt.py  _reduced_rank_tf.py  _template_sgd_np.py
python/python/bystro/utils/: __init__.py  compress.py  config.py  covariates.py  parse_annotation.py  tar.py  timer.py
python/python/bystro/vcf_utils/: sim_data_generator.py  simulate_random_vcf.py  test_simulate_random_vcf.py
python/src/: lib.rs  main.rs
search/save/: .initialize_conda_env.sh  Cargo.toml  pyproject.toml  requirements.txt
search/save/python/save/: __init__.py  handler.py  listener.py
search/save/src/: lib.rs
search2/: .initialize_conda_env.sh  Cargo.toml  install.sh  pyproject.toml  requirements.txt  setup.py
search2/.github/workflows/: CI.yml
search2/python/search/: __init__.py
search2/python/search/index/: __init__.py  bystro_file.pyx  handler.py  listener.py  test.py
search2/python/search/save/: __init__.py  handler.py  listener.py  utils.pyx
search2/python/search/utils/: __init__.py  annotation.py  beanstalkd.py  messages.py
search2/src/: lib.rs
vcf2/: Cargo.toml
vcf2/src/: main.rs
(+704 files in other folders)
