[package]
name = "bystro"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bystro"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
