[build-system]
requires = ["maturin>=1.5.1", "setuptools", "wheel", "Cython"]
build-backend = "maturin"

[project]
name = "bystro"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "2.0.0-beta21"
dependencies = [
    "openpyxl==3.1.2",
    "boto3==1.28.9",
    "liftover==1.2.2",
    "msgspec==0.18.6",
    "numba==0.60.0",
    "opensearch-py[async]==2.5.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "pystalk==0.7.0",
    "ray[default]==2.37.0",
    "ruamel.yaml==0.17.31",
    "scikit-allel==1.3.8",
    "scikit-learn==1.2.2",
    "skops==0.7.post0",
    "tqdm==4.66.3",
    "cloudpickle==3.0.0",
    "torch==2.2",
    "psutil==5.9.6",
    "matplotlib==3.7.1",
    "ecos==2.0.13",
    "osqp==0.6.5",
    "cvxpy==1.5.2",
    "pyro-ppl==1.9.1",
    "somadata==1.0.0",
    "statsmodels==0.14.2",
    "nest-asyncio==1.6.0",
]

[tool.maturin]
python-source = "python"
include = ["bystro/**/**/*.so"]
features = ["pyo3/extension-module"]
module-name = "bystro._rs"

[tool.black]
line-length = 105

[tool.ruff]
line-length = 105

# commented codes are ones we're not currently passing-- these are
# aspirationally left in so that we can gradually enforce them as well.

select = [
    "A", # flake8-builtins
    # "B",  # bugbear
    # "C",  # complexity
    # "D",  # pydocstyle
    "E", # pyflakes errors
    "F", # pyflakes
    "G", # logging format
    # "I",  # imports, fixable
    "N", # variable names
    "Q", # flake quotes
    # "S",  # security
    # "T",  # print statements
    #"W",  # warnings, fixable
    # "ANN",  # annotations
    "ARG", # unused arguments
    # "BLE",  # blind exceptions
    "DTZ", # datetimes
    # "EM", # string formatting in execptions, fixable
    "ERA", # commented code
    "EXE", # flake8 executables
    # "FBT",  # boolean traps
    "ICN", # import conventions
    "ISC", # implicit string concatenation
    "NPY", # numpy specific rules
    "PD",  # pandas rules
    # "PGH", # blanket type ignores
    "PIE", # misc linting
    #"PL",  # refactoring
    # "PT",  # unittest-style asserts
    # "PTH",  # pathlib
    "RET", # return statements
    "RSE", # raise statements
    # "RUF",  # ruff-specific rules
    "SIM", # simplifications
    "SLF", # check for access of private class attributes
    #"TCH",  # type-checking
    #"TRY",  # try-statement linting
    #"UP",  # pyupgrade
    "YTT", # sys.version lints
]

ignore = [
    "ANN101", # don't require to annotate self, especially because ruff is sometimes confused about ANN101 vs ANN102
    "ANN102", # don't require to annotate cls
    "D203",   # one-blank-line-before class: conflicts with D211
    "D213",   # multiline-summary-second-string: conflicts with D212
    "N803",   # upercase variable names are often ok in scientific programming 
    "N806",   # upercase function names are often ok in scientific programming(ditto)
    "N815",   # ignore camelCase for now (remove this eventually)
    "RET504", # allow variable assignments before return values
    "S311",   # it's fine to use standard pseudo-random generators
    "SIM300", # ignore yoda conditions, too many false positives
]
unfixable = [
    "F841", # don't let ruff remove unused variables by default-- results are often very confusing.
]

# linting in test directories should be a little more relaxed
[tool.ruff.per-file-ignores]
"test*.py" = [
    'S101',    # bare asserts actually required for pytest
    'N802',    # snake-case violations are fine for test methods
    'PLR2004', # magic constants are fine
    'D103',    # don't require docstrings in tests: method names should suffice
    'ANN201',  # don't worry about return types in tests
]

[project.scripts]
bystro-save-worker = "bystro.search.save.listener:main"
bystro-index-worker = "bystro.search.index.listener:main"
bystro-annotation-worker = "bystro.annotation.listener:main"
bystro-api = "bystro.cli.cli:main"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing" # add detailed coverage report by default
