[package]
name = "bystro-search"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "search"
crate-type = ["cdylib"]

[dependencies]
arrow = "35.0.0"
flate2 = "1.0.25"
heed = "0.11.0"
opensearch = "2.0.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde_json = "1.0.93"
tar = "0.4.38"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }
