[package]
name = "bystro-vcf"
version = "0.1.0"
authors = ["Alex Kotlar <akotlar@bu.edu>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3.8"
num_cpus = "1.10.0"
lazy_static = "1.3.0"
log = "0.4.6"
crossbeam-utils = "0.6.5"
maplit = "1.0.1"
hashbrown = "0.3.0"
atoi = "0.3.1"
byteorder = "1.3.1"
itoa = "0.4.3"
