[package]
name = "save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "save"
crate-type = ["cdylib"]

[dependencies]
arrow = "33.0.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
serde_json = "1.0.93"
